header content align fix

--- a/style.css
+++ b/style.css
@@ -41,11 +41,12 @@ header{
 }
 
 .logo img{
-    height: 1rem;
+    height: 1.2rem;
+    vertical-align: middle;
 }
 
 nav{
-    height: 100%
+    height: 50%
 }
 
 .container{
